force-app/main/default/objects/Contact/fields/ABM_Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>ABM_Campaign_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact is associated with a Target Account and enrolled in an ABM Campaign.</description>
    <label>ABM Campaign Member</label>
    <type>Checkbox</type>
</CustomField>