force-app/main/default/objects/Contact/fields/Account_SDR__c.field-meta.xml
<CustomField>
    <fullName>Account_SDR__c</fullName>
    <description>Displays the SDR Name on the Contact</description>
    <formula>Account.SDR__r.FirstName &amp;&quot; &quot;&amp; Account.SDR__r.LastName</formula>
    <label>Account SDR</label>
    <type>Text</type>
</CustomField>