force-app/main/default/objects/Contact/fields/Attrib_First_Date__c.field-meta.xml
<CustomField>
    <fullName>Attrib_First_Date__c</fullName>
    <label>Attrib First Date</label>
    <type>Date</type>
</CustomField>