force-app/main/default/objects/Contact/fields/Attrib_Last_Tier__c.field-meta.xml
<CustomField>
    <fullName>Attrib_Last_Tier__c</fullName>
    <formula>text(Attrib_Last_Campaign__r.Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attrib Last Tier</label>
    <type>Text</type>
</CustomField>