force-app/main/default/objects/Contact/fields/Best_Sequence_Owner__c.field-meta.xml
<CustomField>
    <fullName>Best_Sequence_Owner__c</fullName>
    <formula>if(isblank(Outreach_Owner__c),
if(isblank( Current_Sequence_Owner__c ),
 Account.Owner.FirstName + &quot; &quot; + Account.Owner.LastName,
Current_Sequence_Owner__c ),
 Outreach_Owner__r.FirstName  + &quot; &quot; + Outreach_Owner__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Best Sequence Owner</label>
    <type>Text</type>
</CustomField>