force-app/main/default/objects/Contact/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <description>Stores the contact's birthday date for birthday reminder automation</description>
    <label>Birthday</label>
    <type>Date</type>
</CustomField>