force-app/main/default/objects/Contact/fields/Business_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Business_Email_2__c</fullName>
    <description>This is used if a person has a second business email.</description>
    <label>Business Email 2</label>
    <type>Email</type>
</CustomField>