force-app/main/default/objects/Contact/fields/Consulting_Firm__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Firm__c</fullName>
    <label>Consulting Firm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>