force-app/main/default/objects/Contact/fields/DataTransfer_Test_Field_002__c.field-meta.xml
<CustomField>
    <fullName>DataTransfer_Test_Field_002__c</fullName>
    <label>Data Transfer Test Field 002</label>
    <length>255</length>
    <type>Text</type>
</CustomField>