force-app/main/default/objects/Contact/fields/DataTransfer_Test_Field_003__c.field-meta.xml
<CustomField>
    <fullName>DataTransfer_Test_Field_003__c</fullName>
    <label>Data Transfer Test Field 003</label>
    <length>255</length>
    <type>Text</type>
</CustomField>