force-app/main/default/objects/Contact/fields/Deal_Reg_Referring_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Referring_Rep_Email__c</fullName>
    <label>Deal Reg - Referring Rep Email</label>
    <type>Email</type>
</CustomField>