force-app/main/default/objects/Contact/fields/Email_Opt_Out_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt Out (Outreach)</label>
    <type>Checkbox</type>
</CustomField>