force-app/main/default/objects/Contact/fields/Expansion_Added_Record__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Added_Record__c</fullName>
    <label>Expansion Added Record</label>
    <type>Date</type>
</CustomField>