force-app/main/default/objects/Contact/fields/Fit_score_07_27_2025__c.field-meta.xml
<CustomField>
    <fullName>Fit_score_07_27_2025__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Fit score from HubSpot.</description>
    <label>Fit score (07/27/2025)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>