force-app/main/default/objects/Contact/fields/HubSpot_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Engagement_Score__c</fullName>
    <label>HubSpot Engagement Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>