force-app/main/default/objects/Contact/fields/HubSpot_Score__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Score__c</fullName>
    <label>HubSpot Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>