force-app/main/default/objects/Contact/fields/IsContact__c.field-meta.xml
<CustomField>
    <fullName>IsContact__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsContact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>