force-app/main/default/objects/Contact/fields/IsVIP__c.field-meta.xml
<CustomField>
    <fullName>IsVIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark VIP customers</description>
    <label>Is VIP</label>
    <type>Checkbox</type>
</CustomField>