force-app/main/default/objects/Contact/fields/Lantern_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lantern_Phone__c</fullName>
    <label>Lantern Phone</label>
    <type>Phone</type>
</CustomField>