force-app/main/default/objects/Contact/fields/Lantern_Prior_Company__c.field-meta.xml
<CustomField>
    <fullName>Lantern_Prior_Company__c</fullName>
    <label>Lantern Prior Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>