force-app/main/default/objects/Contact/fields/Lifetime_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Won_Opportunities__c</fullName>
    <description>Inherit lifetime won opportunities from matched account.</description>
    <formula>Account.Lifetime_Won_Opportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime Won Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>