force-app/main/default/objects/Contact/fields/Matched_Account_Open_Won__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Open_Won__c</fullName>
    <formula>Account.Lifetime_Won_Opportunities__c +  Account.Open_Opportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account Open+Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>