force-app/main/default/objects/Contact/fields/Mkt_Azure_DevOps__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Azure_DevOps__c</fullName>
    <formula>Account.Mkt_Azure_DevOps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt Azure DevOps</label>
    <type>Text</type>
</CustomField>