force-app/main/default/objects/Contact/fields/Mkt_Cursor__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Cursor__c</fullName>
    <formula>Account.Mkt_SCM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt Cursor</label>
    <type>Text</type>
</CustomField>