force-app/main/default/objects/Contact/fields/Mkt_DataBricks__c.field-meta.xml
<CustomField>
    <fullName>Mkt_DataBricks__c</fullName>
    <formula>Account.Mkt_DataBricks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt DataBricks</label>
    <type>Text</type>
</CustomField>