force-app/main/default/objects/Contact/fields/Mkt_GitHub_CoPilot__c.field-meta.xml
<CustomField>
    <fullName>Mkt_GitHub_CoPilot__c</fullName>
    <formula>Account.Mkt_GitHub_CoPilot__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt GitHub CoPilot</label>
    <type>Text</type>
</CustomField>