force-app/main/default/objects/Contact/fields/Mkt_Insights__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Insights__c</fullName>
    <formula>Account.Mkt_Insights__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt Insights</label>
    <type>Text</type>
</CustomField>