force-app/main/default/objects/Contact/fields/Mkt_J2EE__c.field-meta.xml
<CustomField>
    <fullName>Mkt_J2EE__c</fullName>
    <description>Inherit the value of the Java 2 EE signal from the corresponding account.</description>
    <formula>Account.Mkt_J2EE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt J2EE</label>
    <type>Text</type>
</CustomField>