force-app/main/default/objects/Contact/fields/Mkt_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Salesforce__c</fullName>
    <formula>Account.Mkt_Salesforce__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt Salesforce</label>
    <type>Text</type>
</CustomField>