force-app/main/default/objects/Contact/fields/Outreach_Owner__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outreach Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>