force-app/main/default/objects/Contact/fields/Personal_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email_2__c</fullName>
    <description>This is used if a person has a second personal email.</description>
    <label>Personal Email 2</label>
    <type>Email</type>
</CustomField>