force-app/main/default/objects/Contact/fields/SMS_Opt_Out_Outreach__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_Out_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>