force-app/main/default/objects/Contact/fields/StatusDate_1_Working__c.field-meta.xml
<CustomField>
    <fullName>StatusDate_1_Working__c</fullName>
    <label>StatusDate 1 - Working</label>
    <type>Date</type>
</CustomField>