force-app/main/default/objects/Contact/fields/StatusDate_2_Engaging__c.field-meta.xml
<CustomField>
    <fullName>StatusDate_2_Engaging__c</fullName>
    <label>StatusDate 2 - Engaging</label>
    <type>Date</type>
</CustomField>