force-app/main/default/objects/Contact/fields/StatusDate_3_Meeting__c.field-meta.xml
<CustomField>
    <fullName>StatusDate_3_Meeting__c</fullName>
    <label>StatusDate 3 - Meeting</label>
    <type>Date</type>
</CustomField>