force-app/main/default/objects/Contact/fields/StatusDate_4_Qualified__c.field-meta.xml
<CustomField>
    <fullName>StatusDate_4_Qualified__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusDate 4 - Qualified</label>
    <type>Date</type>
</CustomField>