force-app/main/default/objects/Contact/fields/Sync_to_HubSpot__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_HubSpot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sync Contacts to Hubspot</description>
    <label>Sync to HubSpot</label>
    <type>Checkbox</type>
</CustomField>