force-app/main/default/objects/Contact/fields/Tradeshow_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tradeshow_Notes__c</fullName>
    <label>Tradeshow Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>