force-app/main/default/objects/Contact/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <description>Used as temporary hold of UTM parameters to be stamped on Campaign Member</description>
    <label>utm_content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>