force-app/main/default/objects/Contact/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <description>Used as temporary hold of UTM parameters to be stamped on Campaign Member</description>
    <label>utm_source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>