force-app/main/default/objects/Contact/fields/warmlylastpagesviewed__c.field-meta.xml
<CustomField>
    <fullName>warmlylastpagesviewed__c</fullName>
    <description>Last pages viewed in the last session</description>
    <label>Warmly: Last Pages Viewed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>