force-app/main/default/objects/Contact/fields/warmlylinkedinbio__c.field-meta.xml
<CustomField>
    <fullName>warmlylinkedinbio__c</fullName>
    <description>LinkedIn profile page for this record</description>
    <label>Warmly: Linkedin Bio</label>
    <type>Url</type>
</CustomField>