force-app/main/default/objects/Contact/fields/warmlyprospected__c.field-meta.xml
<CustomField>
    <fullName>warmlyprospected__c</fullName>
    <description>Tracks whether Warmly prospected via AI or Manual Prospector</description>
    <label>Warmly Prospected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
                <label>True</label>
            </value>
            <value>
                <fullName>false</fullName>
                <label>False</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>