force-app/main/default/objects/Contact/fields/warmlytotalsessions__c.field-meta.xml
<CustomField>
    <fullName>warmlytotalsessions__c</fullName>
    <description>Number of website sessions for this visitor</description>
    <label>Warmly: Total sessions</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>