force-app/main/default/objects/Contact/fields/warmlyutmcampaigns__c.field-meta.xml
<CustomField>
    <fullName>warmlyutmcampaigns__c</fullName>
    <description>List of UTM campaigns from sessions for this visitor</description>
    <label>Warmly: UTM Campaigns</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>