force-app/main/default/objects/Contact/fields/X1_Event__c.field-meta.xml
<CustomField>
    <fullName>X1_Event__c</fullName>
    <description>What event led to this lead being tagged X1 Sales-Ready</description>
    <label>X1 Event</label>
    <type>TextArea</type>
</CustomField>