force-app/main/default/objects/Contact/fields/X_Factor__c.field-meta.xml
<CustomField>
    <fullName>X_Factor__c</fullName>
    <label>X-Factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X_Factor</valueSetName>
    </valueSet>
</CustomField>