force-app/main/default/objects/Contact/listViews/BulkMessageContacts.listView-meta.xml
<ListView>
    <fullName>BulkMessageContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Best_X_Factor_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Best_X_Factor__c</field>
        <operation>equals</operation>
        <value>X2 Hot Lead</value>
    </filters>
    <label>Bulk_SMS_Contacts</label>
    <language>en_US</language>
</ListView>